feat: add account deletion
